Fixed alignment issues in josiah.css and art.css

--- a/assets/css/extras/art.css
+++ b/assets/css/extras/art.css
@@ -23,6 +23,7 @@ h1 {
 }
 
 main {
+    padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
     background-color: khaki;
@@ -31,14 +32,21 @@ main {
     margin: auto;
     border-radius: 20px;
     border-style: solid;
-    justify-content:flex-start;
-    align-content:flex-start;
+    justify-content:center;
+    align-items:flex-start;
+    column-gap: 20px;
+
+}
+
+figure, img {
+    margin: 0;
 }
 
 figure {
-    max-width: 20%;
+    width: 25%;
 }
 img {
-    max-width:100%;
+    width:100%;
     border: 3px solid;
+    border-radius: 5px;
 }
