--- a/assets/css/josiah/josiah.css
+++ b/assets/css/josiah/josiah.css
@@ -6,6 +6,6 @@ body {
 }
 
 p {
-    text-align: justify;
+    text-align: left;
     font-size: 50px;
 }
